mobile version updated with text from lorem ver 2

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="kadınlar, adalet, geçmiş, cinayet, ölüm, womans, güvenlik, kadın, türkiye, Turkey, olaylar, susmayacaklar, unutulmasın, diye, sessiz, çığlıklar, sosyal, sorumluluk, haklar, aileler, insanlık"
     />
     <meta property="og:title" content="Sessiz Çığlıklar - Unutulmasın Diye" />
-    <meta property="og:description" content="When the world went into lockdown, The Feed set up a phone line to receive voice memos from all over Australia. This is the story of COVID-19, as told by you." />
+    <meta property="og:description" content="Her kadın bir hikaye taşıyor, her bir hayat eşsiz ve değerli. Bu platform, şiddet ve haksızlık sonucu hayatlarını kaybeden kadınların hatıralarını yaşatmak, toplumda farkındalık yaratmak ve adalet için bir araya gelmiş bir dayanışma alanıdır." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://www.sessizcigliklar.com/" />
     <meta property="og:image:width" content="1200" />
