transleted to turkish some words and checked some words

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta name="theme-color" content="#ffffff" />
     <meta name="title" content="Sessiz Çığlıklar - Unutulmasın Diye" />
     <meta name="description" content="Türkiye'de yaşanan kadın cinayetleri ve ölümlerini unutturmamak amacıyla oluşturulmuş bir platformdur. Her bir kadının ismi, hikayesi ve yaşamı bu sitede yer alırken, toplumda farkındalık yaratmayı ve sessiz çığlıkları duyurmayı hedefliyoruz. Kadınların unutulmaması ve adaletin sağlanması için yapılan bu çalışmada, siz de ses olun. " />
-    <meta name="keywords" content="kadınlar, adalet, geçmiş, cinayet, ölüm, womans, güvenlik, kadın, türkiye, Turkey, olaylar, susmayacaklar, unutulmasın, diye, sessiz, çığlıklar, sosyal, sorumluluk, haklar, aileler, insanlık"
-    />
+    <meta name="keywords" content="kadınlar, adalet, geçmiş, cinayet, ölüm, womans, güvenlik, kadın, türkiye, Turkey, olaylar, susmayacaklar, unutulmasın, diye, sessiz, çığlıklar, sosyal, sorumluluk, haklar, aileler, insanlık"/>
     <meta property="og:title" content="Sessiz Çığlıklar - Unutulmasın Diye" />
     <meta property="og:description" content="Her kadın bir hikaye taşıyor, her bir hayat eşsiz ve değerli. Bu platform, şiddet ve haksızlık sonucu hayatlarını kaybeden kadınların hatıralarını yaşatmak, toplumda farkındalık yaratmak ve adalet için bir araya gelmiş bir dayanışma alanıdır." />
     <meta property="og:type" content="website" />
@@ -132,7 +131,7 @@
             }, i.p = "", i.oe = function(e) {
                 throw console.error(e), e
             };
-            var a = this["webpackJsonpthe-feed-covid-19"] = this["webpackJsonpthe-feed-covid-19"] || [],
+            var a = this["webpackJsonpthe-feed-woman"] = this["webpackJsonpthe-feed-woman"] || [],
                 c = a.push.bind(a);
             a.push = t, a = a.slice();
             for (var f = 0; f < a.length; f++) t(a[f]);
